--- a/quNaDiaoJm/Info.plist
+++ b/quNaDiaoJm/Info.plist
@@ -2,12 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationAlwaysUsageDescription </key>
-	<string>我们真的需要傻逼波的地理信息</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>我们需要傻逼波的地理信息</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>zh_CN</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -26,6 +22,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription </key>
+	<string>我们真的需要傻逼波的地理信息</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>我们需要傻逼波的地理信息</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
